Fix align text

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body{
 
 .sub-section .text {
 	flex: 1;
-	text-align: right;
+	direction: rtl;
 	color: #333;
 	font-size: 25px;
 }
